# test-chatkit

./: .dockerignore  .env.example  .env.example.call_tracker  .gitignore  .npmrc  AGENTS.md  AI_WORKFLOW_GENERATOR_GUIDE.md  BACKEND_IMPROVEMENTS.md  CLAUDE.md  COMMENT_ACTIVER_LOGS_APPELS_UNIQUEMENT.md  COVERAGE.md  DOCKER_SERVICES.md  FRONTEND_IMPROVEMENTS.md  INDEX_TESTS.md  INSTALL_PJSUA2.md  LITELLM_PROXY_SETUP.md  LITELLM_QUICKSTART.md  MIGRATION_PYTHON311.md  MULTI_SIP_IMPLEMENTATION.md  Makefile.test  NEXT_SESSION_TODO.md  NGINX_HTTPS_SETUP.md  NGINX_SETUP.md  PJSIP_PYTHON.md  QUICKSTART.md  RADIX_UI_ACCESSIBILITY_REPORT.md  RATE_LIMITING.md  README.md  README_TEST_APPELS.md  REFACTORING_RESULTS.md  SETUP_BRIDGE.md  START_HERE.md  TELEPHONY_FEATURES.md  TEST_APPELS_ENTRANTS.md  TEST_ENV_LOGGING.md  TROUBLESHOOTING.md  UX_IMPROVEMENTS.md  WORKFLOW-BLOCKS-REFERENCE.md  WORKFLOW_BUILDER_ANALYSIS.md  WORKFLOW_BUILDER_CANVAS_REFACTORING_PLAN.md  (+39 more)
backend/: Dockerfile  LOGGING_MIGRATION.md  MIGRATION_INSTRUCTIONS.md  PJSUA_PORT_BUG.md  apply_migration.py  improved_system_prompt.md  logging_config_call_tracker_only.py  migrate_sip_workflows.py  pyproject.toml  requirements.txt  run_migration.py  server.py  weather_agent.py  weather_chatkit_server.py
backend/app/: __init__.py  admin_settings.py  attachment_store.py  cache.py  celery_app.py  chatkit.py  chatkit_realtime.py  chatkit_sessions.py  chatkit_store.py  config.py  database.py  dependencies.py  docx_converter.py  docx_template.py  generated_images.py  generation_tracker.py  i18n_utils.py  image_utils.py  live_updates.py  logging_config.py  migrations.py  model_capabilities.py  models.py  rate_limit.py  realtime_gateway.py  realtime_runner.py  request_context.py  schemas.py  secret_settings.py  secret_utils.py  security.py  startup.py  streaming_session.py  supabase_attachment_store.py  telephony_trunk_settings.py  token_sanitizer.py  tool_factory.py  voice_settings.py  voice_webrtc_gateway.py  voice_workflow.py  (+1 more)
backend/app/ai_workflow_generator/: README.md  __init__.py  example.py  generator.py  schemas.py  validator.py
backend/app/chatkit/: agent_registry.py
backend/app/chatkit_core/: __init__.py  outputs.py  schemas.py  tools.py  workflow_runner.py
backend/app/chatkit_server/: actions.py  ags.py  context.py  event_buffer.py  server.py  widget_waiters.py  workflow_runner.py
backend/app/computer/: __init__.py  hosted_browser.py  hosted_ssh.py  hosted_vnc.py  shell_executor.py
backend/app/database/: __init__.py  ad_hoc_migrations.py
backend/app/docs/: __init__.py  service.py
backend/app/github/: __init__.py  api_service.py  oauth_service.py  sync_service.py
backend/app/lti/: __init__.py  ags.py  service.py  tools.py
backend/app/mcp/: __init__.py  connection.py  credentials.py  oauth.py  server_service.py
backend/app/migrations/: __init__.py
backend/app/model_providers/: __init__.py  _shared.py  groq.py  litellm.py  openai.py
backend/app/routes/: __init__.py  admin.py  ai_workflows.py  auth.py  chatkit.py  computer.py  docs.py  github.py  github_ws.py  groups.py  health.py  languages.py  lti.py  lti_admin.py  mcp.py  model_registry.py  openai_api_key.py  outbound.py  telephony_trunk.py  tools.py  users.py  vector_stores.py  voice_relay_ws.py  voice_settings.py  widgets.py  workflow_monitor_ws.py  workflows.py
backend/app/services/: __init__.py  branch_service.py
backend/app/startup/: __init__.py  main.py
backend/app/tasks/: github_sync.py  language_generation.py  streaming_cleanup.py  workflow_generation.py
backend/app/telephony/: __init__.py  async_helpers.py  audio_resampler.py  audio_stream_manager.py  audio_timestretch.py  call_diagnostics.py  call_transfer.py  callbacks.py  config.py  invite_handler.py  media.py  (+15 more)
backend/examples/: LITELLM_GUIDE.md  WORKFLOW_LITELLM_MIGRATION.md  litellm_weather_agent.py  litellm_weather_example.py
backend/migrations/: 001_fix_language_fk_constraint.sql  002_add_is_lti_to_users.sql  002_add_lti_chatkit_options.sql  003_add_parent_slug_to_workflow_steps.sql  004_add_workflow_sharing.sql  005_add_workflow_share_permission.sql  006_add_github_integration.sql  006_add_streaming_sessions.sql  006_add_workflow_generation.sql  README.md
backend/tests/: conftest.py  test_agent_image_links.py  test_agent_instruction_templates.py  test_async_helpers.py  test_call_diagnostics_runtime.py  test_chatkit_store_normalization.py  test_docs.py  test_health.py  test_model_providers.py  test_pjsua_config.py  test_response_format_schema.py  test_response_schema.py  test_state_expression_templates.py  test_state_manager.py  test_stream_agent_response_with_tools.py  test_stream_processor.py  test_vector_store_defaults.py  test_vector_store_ingestion.py  test_vector_store_protection.py  test_vector_store_search.py  test_vector_store_workflow_import.py  test_voice_bridge_streaming.py  test_workflow_executor.py  test_workflow_export.py  test_workflow_generated_images_state.py  test_workflow_service_validation.py  test_workflow_wait_resume.py
backend/workflows/: __init__.py  agents.py  get_weather.py  weather_agent.py
(+874 files in other folders)
