[project]
name = "chatkit-sample"
version = "0.1.0"
description = "ChatKit FastAPI session backend and React scaffold"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "openai",
    "openai-agents[litellm]",
    "openai-chatkit @ file:///home/fpoisson/Documents/GitHub/test-chatkit/chatkit-python",
    "uvicorn[standard]",
    "python-dotenv",
    "httpx",
    "sqlalchemy",
    "psycopg2-binary",
    "PyJWT",
    "email-validator",
    "pgvector",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.(py|pyi)$"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
src_paths = ["app", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
exclude = "tests/fixtures"
files = ["app", "tests", "server.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
