[project]
name = "chatkit-sample"
version = "0.1.0"
description = "ChatKit FastAPI session backend and React scaffold"
requires-python = ">=3.10"
dependencies = [
    "aiosip",
    "aiortc",
    "fastapi",
    "openai",
    "openai-agents[litellm]",
    "openai-chatkit @ file:../chatkit-python",
    "cryptography",
    "uvicorn[standard]",
    "python-dotenv",
    "httpx",
    "sqlalchemy",
    "psycopg2-binary",
    "PyJWT",
    "email-validator",
    "pgvector",
    "playwright",
    "soxr>=0.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.(py|pyi)$"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
src_paths = ["app", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
testpaths = ["tests", "app/tests"]

[tool.coverage.run]
source = ["app"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/.venv/*",
  "*/migrations/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
# Prioriser les modules critiques
[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
exclude = "tests/fixtures"
files = ["app", "tests", "server.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
